
  * Added option to select the audio device.

  * Added support for CDFJ+ bankswitching type.

  * Further enhanced UA bankswitching to support more Brazilian carts.

  * Added option to display detected settings info when a ROM is loaded.

  * Added another oddball TIA glitch option for delayed background color.

  * Added option to disable aspect correct scaling.

  * Replaced "Re-disassemble" with "Disassemble @ current line" in debugger.

  * Fixed bug when taking fullscreen snapshots; the dimensions were
    sometimes cut off.


-Have fun!


6.2.1 to 6.2.2 (August 25, 2020)

  * Fixed a bug in initial controller mapping.


6.2 to 6.2.1: (June 20, 2020)

  * Fixed Pitfall II ROM not working correctly.

  * Fixed crashes when using some combinations of bankswitching schemes on
    incorrect ROMs, or when using invalid ROM file sizes, etc.

  * Fixed RIOT timer behaviour on reading/writing at the wraparound cycle.

  * Fixed incorrectly setting D6 bit on TIA reads in some cases.  Related
    to this, improve 'tiadriven' option to randomize only D5..D0 bits.

  * Fixed custom palette and TV effects adjustable slider rounding issue.

  * Fixed some bugs in 3E+ scheme when using non-standard ROM sizes.

  * Fixed crash in Audio & Video dialog when opened from debugger, and the
    debugger window sometimes being resized when using the Options dialog.

  * Make NTSC custom phase shift not affect Yellow anymore.

  * Fixed '1x' snapshot mode; TV effects are now disabled.  This mode
    now generates a clean, pixel-exact image.

  * Fixed mappings sometimes not being saved in the Retron77 port.

  * A ROM properties file may now be placed next to the ROM (with the same
    name as the ROM, except ending in .pro), and Stella will automatically
    apply the properties to the ROM. [NOTE: this was present in 6.2, but
    was mistakenly left out of the changelog]

  * Added button to Game Info dialog to save properties of the currently